--- a/src/components/AaNewsItem/AaNewsItem.scss
+++ b/src/components/AaNewsItem/AaNewsItem.scss
@@ -51,6 +51,7 @@
 }
 
 .AaNewsItem .btn {
+  color: #FFFFFF;
   border-radius: 30px;
   font-size: 20px;
   text-transform: uppercase;
@@ -60,7 +61,9 @@
   background-image: none;
   border-width: 0;
   &:hover {
+    color: #FFFFFF;
     background-color: $primary-color-light;
     background-image: none;
+    cursor: pointer;
   }
 }
