--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,5 +3,6 @@ $primary-color-light: #3e4f5a;
 $secondary-color: #a27a2e;
 $black: #212121;
 $bage: #d6d9d0;
+$gray: #2d3337;
 $green: #233f26;
 $brown: #3f3a1e;
